DataViews: Type the ViewList component (#61246)
Co-authored-by: youknowriad <youknowriad@git.wordpress.org>
Co-authored-by: oandregal <oandregal@git.wordpress.org>
Co-authored-by: sirreal <jonsurrell@git.wordpress.org>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
 		"rootDir": "src",
-		"declarationDir": "build-types"
+		"declarationDir": "build-types",
+		"skipLibCheck": true,
+		"checkJs": false
 	},
 	"references": [
 		{ "path": "../a11y" },
@@ -16,5 +18,5 @@
 		{ "path": "../primitives" },
 		{ "path": "../private-apis" }
 	],
-	"include": [ "src/**/*.ts", "src/**/*.tsx" ]
+	"include": [ "src" ]
 }
