Update and align babel dependencies version (#65949)
* Update @babel/* dependencies to 7.25.7

* Swap old proposal-* plugin to transform-* plugins

* Update non-official, babel-* dependencies

* Update package-lock.json

* Remove `@babel/plugin-transform-async-generator-functions` and `@babel/plugin-transform-export-namespace-from` as they are included with other dependencies

* Update platform docs package-lock.json

* CHANGELOG

--

Co-authored-by: ciampo <mciampini@git.wordpress.org>
Co-authored-by: gziolo <gziolo@git.wordpress.org>
Co-authored-by: tyxla <tyxla@git.wordpress.org>
Co-authored-by: sirreal <jonsurrell@git.wordpress.org>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	"sideEffects": false,
 	"dependencies": {
 		"@ariakit/react": "^0.4.10",
-		"@babel/runtime": "^7.16.0",
+		"@babel/runtime": "7.25.7",
 		"@wordpress/components": "file:../components",
 		"@wordpress/compose": "file:../compose",
 		"@wordpress/data": "file:../data",
